tests/jballerina-unit-test/src/test/resources/test-src/javainterop/negative/method_sig_not_match12.bal
import ballerinax/java;

function getIntFromJsonInt(json x) returns int = @java:Method {
    class:"org/ballerinalang/nativeimpl/jvm/tests/StaticMethods"
} external;

